--- a/EmployeeTracker.UI/app/app.component.html
+++ b/EmployeeTracker.UI/app/app.component.html
@@ -1,7 +1,7 @@
 ﻿<div id="wrapper">
 
     <!-- Navigation Area -->
-    <!--<et-sidebar></et-sidebar>-->
+    <et-sidebar></et-sidebar>
     <!-- End Navigation Area -->
     <!-- Content Area -->
     <div id="page-wrapper">
