--- a/EmployeeTracker.UI/app/layout/sidebar.component.html
+++ b/EmployeeTracker.UI/app/layout/sidebar.component.html
@@ -19,7 +19,7 @@
             </a>
             <!-- dropdown-messages -->
             <ul class="dropdown-menu dropdown-messages">
-                <li>
+                <!--<li>
                     <div class="text-center small">
                         <strong>You have 2 tutorials</strong>
                     </div>
@@ -53,7 +53,7 @@
                             <strong>See Other Tutorials</strong>
                         </div>
                     </a>
-                </li>
+                </li>-->
             </ul>
             <!-- /.dropdown-messages -->
         </li>
@@ -66,11 +66,11 @@
             <!-- dropdown-user -->
             <ul class="dropdown-menu dropdown-user">
                 <li>
-                    <a href="https://www.cc28tech.com/cathy-wun" target="_blank">
+                    <!--<a href="https://www.cc28tech.com/cathy-wun" target="_blank">-->
                         <div class="text-center small">
                             <i class="fa fa-user fa-fw"></i> <span class="text-info"><strong>About Me</strong></span>
                         </div>
-                    </a>
+                    <!--</a>-->
                 </li>
             </ul>
             <!-- /.dropdown-user -->
