Completed Add Employee functionality.

--- a/EmployeeTracker.UI/Views/Shared/_Layout.cshtml
+++ b/EmployeeTracker.UI/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="~/node_modules/nvd3/build/nv.d3.min.css" />
     <script src="~/node_modules/d3/d3.min.js"></script>
     <script src="~/node_modules/nvd3/build/nv.d3.min.js"></script>
+    @*<script src="~/node_modules/ngx-mydatepicker/bundles/ngx-mydatepicker.umd.min.js"></script>*@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css" />
     <script>
         System.import('app').catch(function (err) { console.error(err); });
